Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Operating System: ReactOS
Platform: x86 Hardware
-
July 2016
-
5802
Description
Revision 50222 on VirtualBox 4
Opera 11 can't be installed, the installer is stuck after pressing the installation button
DebugLog says:
fixme:(dll\win32\shell32\shlexec.c:1541) flags ignored: 0x00000100
|
(lib\rtl\path.c:258) don't keep the directory handle open on removable media
|
(lib\rtl\actctx.c:874) Unsupported yet language attribute (*)
|
(lib\rtl\actctx.c:1485) unknown element trustInfo
|
(lib\rtl\actctx.c:1485) unknown element compatibility
|
(lib\rtl\actctx.c:2007) looking for name=Microsoft.Windows.Common-Controls version=6.0.0.0 arch=*
|
(ntoskrnl\ps\query.c:1253) Unsupported or unimplemented: 22
|
(dll\ntdll\ldr\utils.c:2365) Relocating (67440000 -> 00FE1000) C:\DOCUME~1\ADMINI~1\LOCAL_~1\Temp\7ZipSfx.001\Opera.dll
|
(lib\rtl\actctx.c:1485) unknown element trustInfo
|
(lib\rtl\actctx.c:1485) unknown element trustInfo
|
(ntoskrnl\se\semgr.c:299) SidInToken Calls: 40000
|
(lib\rtl\actctx.c:874) Unsupported yet language attribute (*)
|
(lib\rtl\actctx.c:1485) unknown element trustInfo
|
(lib\rtl\actctx.c:1485) unknown element compatibility
|
(lib\rtl\actctx.c:2007) looking for name=Microsoft.Windows.Common-Controls version=6.0.0.0 arch=*
|
(subsystems\win32\win32k\ntuser\hook.c:1281) Local hook installing Global HookId: 13
|
(dll\ntdll\ldr\utils.c:2301) Failed to create or open dll section of 'winex11.drv' (Status c0000135)
|
(subsystems\win32\win32k\eng\pdevobj.c:247) No GRAPHICS_DEVICE found for \\.\DISPLAY1!
|
(subsystems\win32\win32k\objects\dclife.c:582) Didn't find a suitable PDEV
|