[SHELL32]check for NULL pointer in CShellLink::SetDescription. patch by Joachim Henze. fixes Opera 12 installer CORE-5272

svn path=/trunk/; revision=72033